Name:           gensym
Version:        0.1
Cabal-Version:  >= 1.2.3
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Author:         Geoff Hulette
Maintainer:     ghulette@gmail.com
Stability:      experimental
Homepage:       http://github.com/ghulette/monad-gensym
Bug-reports:    http://github.com/ghulette/monad-gensym/issues
Synopsis:       Symbol generation monad
Description:    Simple monad for generating symbols, binding them to scoped  
                variables, and doing variable/symbol replacement in strings.
Category:       Code Generation

Extra-Source-Files: examples/Simple.hs
Data-Files: LICENSE, README

Library
  Build-Depends:   base >= 4 && < 5,containers,mtl
  Hs-Source-Dirs:  src
  Exposed-Modules: Control.Monad.GenSym
